--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
       {% if post.permalink %}
       {{ post.permalink | relative_url }}
       {% else %}
-      {{ post.url }}
+      {{ post.url | relative_url }}
       {% endif %}">
         <header class="post-preview__header">
           <h3 class="post-preview__heading">
