Added robots.txt and sitemap.xml. Copyedit.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
             {{ post.title }}
           </h3>
           <span class="post-preview__subheading">
-            {% include date-post.html %}
+            {% include date.html date=post.date %}
           </span>
         </header>
         <section class="post-preview__body">
