--- a/relatos.html
+++ b/relatos.html
@@ -16,7 +16,7 @@ permalink: /relatos/
             {{ relato.title }}
           </h3>
           <span class="tale-preview__subheading">
-            {% include date-relato.html %}
+            {% include date.html date=relato.date %}
           </span>
         </header>
     </a>
