--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@ pagination:
           </p>
         </section>
     </a>
+    <ul>
+    {% for tag in post.tags %}
+      <li>{{ tag }}</li>
+    {% endfor %}
+    </ul>
   </article>
 {% endfor %}
